--- a/src/experimental/web/public/index.html
+++ b/src/experimental/web/public/index.html
@@ -4,6 +4,11 @@
   </head>
   <body>
     <h1>Hi</h1>
+    <ul>
+      <li><a href="http://localhost:3000/server-status">Lighttpd Status</a></li>
+      <li><a href="http://localhost:3000/server-stats">Lighttpd Statistics</a></li>
+      <li><a href="http://localhost:3000/app/">Sinatra App</a></li>
+    <ul>
   </body>
 </html>
 
