Cleaned up rails example. Added descriptions of MagLev command line options to release_notes.

--- a/examples/rails/myapp/public/index.html
+++ b/examples/rails/myapp/public/index.html
@@ -248,6 +248,7 @@
         <div id="about">
           <h3><a href="rails/info/properties" onclick="about(); return false">About your application&rsquo;s environment</a></h3>
           <div id="about-content" style="display: none"></div>
+          <h3>A Sample link: <a href="/home/index">/home/index</a></h3>
         </div>
 
         <div id="getting-started">
