Added scaffold generated files to show MySQL integration to sample rails app.

--- a/examples/rails/myapp/public/index.html
+++ b/examples/rails/myapp/public/index.html
@@ -211,6 +211,16 @@
         </div>
 
         <div id="getting-started">
+          <h1>MyApp Links</h1>
+          <p>
+            Here are a few links that have been added to the standard Rails
+            application.  See the <tt>README.rdoc</tt> file for details on
+            how this application was created.
+          </p>
+          <ul>
+            <li><a href="/home/index">Home#index</a></li>
+            <li><a href="/posts">/posts</a></li>
+          </ul>
           <h1>Getting started</h1>
           <h2>Here&rsquo;s how to get rolling:</h2>
 
